fixed invisible sr-only

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -166,6 +166,10 @@ input[readonly] {
     margin: 0px !important;
     background-color: black;
 }
+
+.icon-bar {
+    background-color: white !important;
+}
   
 .mynav li {
        font-family: 'Georgia', Arial, sans-serif;
